--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="C:/Users/iLipa/Desktop/Godot Server.exe"
+export_path="C:/Users/iLipa/Desktop/Godot FourX/Godot Server.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
